<resources>
    <string name="banner_map_detail_bottom">ca-app-pub-9861090111595732/3860499804</string>

    <string name="app_name">GO:tacs</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings1</string>

    <string name="disclaimer_url">https://dooku.corvus.uberspace.de/disclaimer-en</string>

    <!-- Main Content -->
    <string name="no_main_content">Zur Zeit gibt es leider keine Aktivitäten.</string>

    <!-- Strategies Fragment -->
    <string name="no_strategies">You haven\'t saved any strategies.</string>
    <string name="strat_name_hint">Strategy name</string>
    <string name="strat_group">Group: %s</string>

    <!-- Nav menu -->
    <string name="nav_home">Home</string>
    <string name="nav_maps">Maps</string>
    <string name="nav_groups">Groups</string>
    <string name="nav_strategies">Strategies</string>
    <string name="nav_profile">My Profile</string>
    <string name="nav_disclaimer">Info</string>

    <!-- My Profile Login -->
    <string name="my_profile_login_description">Please login with your username / password, or create a new account.</string>
    <string name="my_profile_submit_button">Log In</string>
    <string name="my_profile_logout_button">Sign out</string>
    <string name="my_profile_register_button">Register</string>
    <string name="password_hint">password</string>
    <string name="username_hint">user name</string>
    <string name="toast_logout_successful">You\'ve been logged out successfully.</string>

    <!-- Check login status -->
    <string name="check_login_status">You\'re not logged in. Please log in.</string>

    <!-- Groups -->
    <string name="group_name_hint">Group name</string>
    <string name="group_password_hint">Group password</string>
    <string name="group_member_count">%s members</string>
    <string name="pull_to_refresh">Pull down to refresh.</string>
    <string name="button_leave_group">leave group</string>
    <string name="button_delete_group">delete group</string>
    <string name="leave_group_failed">Failed to leave the group.</string>
    <string name="delete_group_failed">The group couldn\'t be deleted.</string>
    <string name="group_name_or_password_empty">The group name / password can not be empty.</string>
    <string name="group_created">You have successfully created the group %s.</string>

    <!-- Member Management -->
    <string name="remove_member">\"%s\" remove</string>
    <string name="promote_member">Promote to group moderator</string>
    <string name="demote_member">Demote group moderator</string>
    <string name="no_possible_action">No action available.</string>

    <!-- NEU - MUSS NOCH IN DIE ENGLISCHE STRINGS DATEI -->

    <!-- Dialogs -->
    <string name="strat_save_title">save strategy</string>
    <string name="strat_save_button">save</string>

    <string name="start_live_mode_title">Start live mode.</string>
    <string name="start_live_mode_message">Choose a group for the live mode: </string>

    <string name="delete_strat_title">delete strategy</string>
    <string name="delete_strat_message">Do you want to delete the actual strategy? This action cannot be undone.</string>
    <string name="delete_strat_button">delete</string>

    <string name="reset_strat_title">reset strategy</string>
    <string name="reset_strat_message">Do you want to delete your drawing and start again?</string>
    <string name="reset_strat_button">reset</string>

    <string name="share_strat_title">share strategy</string>

    <string name="save_strat_message">Do you want to save the current progress? That can not be undone.</string>

    <string name="join_group_title">join group</string>
    <string name="join_group_button">join</string>

    <string name="create_group_title">create group</string>
    <string name="create_group_button">create</string>

    <string name="dialog_abort">cancel</string>

    <!-- Toasts -->
    <string name="create_tac_success">Strategy saved successfully.</string>
    <string name="create_tac_failed">Strategy could not be saved.</string>
    <string name="strat_no_name">You have to give the strategy a name.</string>
    <string name="start_live_mode_without_login">To start the live mode you must be logged in.</string>
    <string name="login_unsuccessful">Login failed. Incorrect username or password.</string>
    <string name="login_successful">You signed in successfully.</string>
    <string name="registration_unsuccessful">Username and password can only contain letters and digits.</string>
    <string name="registration_successful">Registered successfully.</string>
    <string name="username_error">User name must be between 3 and 25 characters long and can not contain any spaces.</string>
    <string name="password_error">Password must be between 6 and 40 characters long and can not contain any spaces.</string>
    <string name="username_in_use">The username is already taken.</string>
    <string name="username_password_wrong">Wrong username or password.</string>
    <string name="provide_tacs_failed">Failed to load strategy. Please try again later.</string>
    <string name="delete_tacs_success">Your strategy has been deleted successfully.</string>
    <string name="delete_tacs_failed">Your strategy unfortunately could not be deleted. Please try again later.</string>
    <string name="change_tac_success">Strategy edited successfully.</string>
    <string name="create_group_failed">The group name is already taken. Please try another.</string>
    <string name="join_group_failed">You could not join the group %s.</string>
    <string name="share_strat_success">Strategy \"%1$s\" successfully shared with the group \"%2$s\".</string>


</resources>
