<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_map_orange_600_18dp"
            android:title="@string/nav_maps" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_group_orange_600_18dp"
            android:title="@string/nav_groups" />
        <item
            android:id="@+id/nav_strategies"
            android:icon="@drawable/ic_mode_edit_orange_600_18dp"
            android:title="@string/nav_strategies" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_orange_600_18dp"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_disclaimer"
            android:icon="@drawable/ic_info_orange_600_18dp"
            android:title="@string/nav_disclaimer" />
    </group>
<!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
-->
</menu>
