<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/manageMember"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/promoteMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/promote_member"
        android:textColor="@android:color/black"
        android:visibility="gone" />

    <TextView
        android:id="@+id/demoteMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/demote_member"
        android:textColor="@android:color/black"
        android:visibility="gone" />

    <TextView
        android:id="@+id/removeMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/remove_member"
        android:textColor="@android:color/black"
        android:visibility="visible" />
</LinearLayout>