<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_my_profile"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_background_gradient">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <!--
        <TextView
            android:id="@+id/avatarImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="Avatar"
            android:textColor="@color/my_profile_background"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/avatar_circle"
            android:layout_gravity="center_horizontal"
            />
            -->
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username"
            android:textSize="30sp"
            android:textColor="@color/orangePrimary"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:ems="8"
            android:text="@string/my_profile_logout_button"
            android:textColor="@drawable/selector_orange_text"
            android:padding="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/ripple_button_rounded"
            android:gravity="center"
            android:clickable="true"/>
        <RelativeLayout
            android:id="@+id/editTextRelativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center_horizontal">
            <EditText
                android:id="@+id/editTextNameSignedIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="15"
                android:textColor="@color/title_text"
                android:background="@color/edit_text_background"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                android:hint="@string/username_hint"
                android:textColorHint="@color/title_text"
                />
            <EditText
                android:id="@+id/editTextPasswordSignedIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="15"
                android:layout_below="@+id/editTextNameSignedIn"
                android:textColor="@color/title_text"
                android:background="@color/edit_text_background"
                android:padding="10dp"
                android:hint="@string/password_hint"
                android:textColorHint="@color/title_text"
                />
        </RelativeLayout>
    </LinearLayout>
    <!--
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_create_orange_600_24dp"
        android:tint="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"/>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_clear_orange_600_24dp"
        android:tint="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:visibility="gone"/>
        -->
</RelativeLayout>